plugins {
    id 'java'
    id 'org.springframework.boot' version '2.4.4'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.lmontes'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter:2.4.4' // Cambia la versión a una compatible con Java 8
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'javax.persistence:javax.persistence-api:2.2'
    //implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'io.springfox:springfox-swagger2:3.0.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'org.modelmapper:modelmapper:2.4.4'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure:2.5.5'

    //classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.5' // Cambia la versión a una compatible con Java 8
}

tasks.named('test') {
    useJUnitPlatform()
}
